plugins {
    id 'java'
    id 'idea'
    id 'jacoco'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.gorylenko.gradle-git-properties' version '2.5.0'
    id 'org.sonarqube' version '6.2.0.5505'
    id 'com.google.protobuf' version '0.9.5'
}

repositories {
    mavenCentral()
}

version = '1.8.0-SNAPSHOT'
group = 'net.geant.nmaas'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

gitProperties {
    gitPropertiesResourceDir = file("${project.rootDir}/src/main/resources")
    dotGitDirectory = file("${project.rootDir}/.git")
    keys = ['git.branch', 'git.commit.time', 'git.commit.id.abbrev', 'git.build.version']
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:4.31.1'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.73.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {
                option 'jakarta_omit'
                option '@generated=omit'
            }
        }
    }
}

jar {
    enabled = false
}

base.archivesName = 'nmaas-platform'

springBoot {
    buildInfo()
}

sourceSets {
    integrationTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    integrationTestImplementation.extendsFrom implementation
    integrationTestRuntimeOnly.extendsFrom runtimeOnly

    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {

    runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    integrationTestCompileOnly 'org.projectlombok:lombok'
    integrationTestAnnotationProcessor 'org.projectlombok:lombok'

    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-mail')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-quartz')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.security:spring-security-oauth2-client'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9')

    implementation('org.modelmapper:modelmapper:3.2.4')
    implementation('org.modelmapper.extensions:modelmapper-spring:3.2.4')
    implementation('org.apache.commons:commons-lang3:3.17.0')

    // Database
    runtimeOnly('com.h2database:h2')
    runtimeOnly('org.postgresql:postgresql')

    // Database audit trail
    implementation 'org.hibernate.orm:hibernate-envers:6.6.19.Final'

    // Database migrations
    implementation('org.flywaydb:flyway-core:11.10.0')
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.10.0'

    implementation('org.freemarker:freemarker:2.3.34')

    implementation('com.vdurmont:semver4j:3.1.0')

    // nmaas statistics extracted from the database
    implementation('io.micrometer:micrometer-registry-prometheus:1.15.1')

    // Kubernetes API client
    implementation('io.fabric8:kubernetes-client:7.3.1')

    // GitLab API client
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0' // version 6 for jakarta

    // GRPC communication with Janitor
    implementation('com.google.protobuf:protobuf-java:4.31.1')
    implementation('io.grpc:grpc-netty-shaded:1.73.0')
    implementation('io.grpc:grpc-protobuf:1.73.0')
    implementation('io.grpc:grpc-stub:1.73.0')

    // CSV processing
    implementation('com.opencsv:opencsv:5.11.2')

    // Tests
    testImplementation('org.mockito:mockito-core:5.18.0')
    testImplementation('org.springframework.boot:spring-boot-starter-test')

    integrationTestImplementation('org.springframework.boot:spring-boot-starter-test')
    integrationTestImplementation('org.springframework.security:spring-security-test')
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn(generateGitProperties)
}

test {
    useJUnitPlatform()
    systemProperties 'property': 'value'
    ignoreFailures = false
    afterTest { desc, result ->
        println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = layout.buildDirectory.file("jacoco/test.exec").get().asFile
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
}

tasks.register('integrationTestOnly', Test) {
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    outputs.upToDateWhen { false }
    afterTest { desc, result ->
        println "Executing itest ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = layout.buildDirectory.file("jacoco/integrationTest.exec").get().asFile
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
}

tasks.register('integrationTest', Test) {
    useJUnitPlatform()
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    outputs.upToDateWhen { false }
    afterTest { desc, result ->
        println "Executing itest ${desc.name} [${desc.className}] with result: ${result.resultType}"
    }
    jacoco {
        destinationFile = layout.buildDirectory.file("jacoco/integrationTest.exec").get().asFile
        excludes = [
                '**/inventory/janitor/**',
                '**/exception/**',
                '**/exceptions/**'
        ]
    }
    dependsOn(test)
}

jacoco {
    toolVersion = "0.8.13"
    reportsDirectory = layout.buildDirectory.dir('jacoco')
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    executionData(test, integrationTest)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/inventory/janitor/**',])
        }))
    }
}

jacocoTestCoverageVerification {
    executionData(test, integrationTest)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/inventory/janitor/**',])
        }))
    }
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.6
            }
        }
        rule {
            element = 'PACKAGE'
            includes = [
                    'net.geant.nmaas.portal.**'
            ]
            excludes = [
                    '**.model*',
                    '**.exceptions**',
                    'net.geant.nmaas.portal.api.webhooks',
                    'net.geant.nmaas.portal.persistent.spec'
            ]
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.5
            }
        }
        rule {
            element = 'PACKAGE'
            includes = [
                    'net.geant.nmaas.orchestration.**'
            ]
            excludes = [
                    '**.model*',
                    '**.exceptions**'
            ]
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.3
            }
        }
    }
}

integrationTest.finalizedBy(jacocoTestCoverageVerification)
jacocoTestCoverageVerification.finalizedBy(jacocoTestReport)

sonarqube {
    properties {
        property "sonar.coverage.exclusions", ["**/inventory/janitor/**", "**/exception/**", "**/exceptions/**"]
    }
}
